[package]
name = "kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.20"
bincode = "1.3.3"
strum = { version = "0.26.1", features = ["derive"] }
rand = "0.8.5"
uint = "0.9.5"
num-bigint = "0.4.4"

[dev-dependencies]
env_logger = "0.11.2"

[[bin]]
name = "node"
path = "src/main.rs"
